--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,8 +1,11 @@
 body 
     +light
     color: $text-color
+    overflow-x:hidden
 img
     max-width: 100%
+#huy
+    display: hidden
 .section
     padding: 100px 0
     &-title
