--- a/sass/blocks/_before.sass
+++ b/sass/blocks/_before.sass
@@ -41,3 +41,8 @@
         transform: translateX(-200%)
     &-right
         transform: translateX(200%)
+@media (max-width: 768px)
+    .before
+        &-slider
+            &-arrows
+                display: none
