--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -30,3 +30,12 @@
                 height: 10px
                 border: 10px solid transparent
                 border-top: 10px solid #fff
+@media (max-width: 768px)
+    .reviews
+        &-slider
+            display: flex
+            justify-content: space-around
+            flex-wrap: wrap
+            &__text
+                &:after
+                    display: none
